--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -24,19 +24,20 @@ img {
   justify-content: space-around;
 }
 .info-item {
+  font-size: 12px;
   text-align: center;
 }
 .load-more {
-  display: block;
+  display: none;
   margin-left: auto;
   margin-right: auto;
-  background-color: blue;
+  margin-top: 10px;
+  background-color: rgb(4, 0, 255);
   color: white;
   border-width: 0;
-  border-radius: 5px;
+  border-radius: 7px;
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: rgba(0, 102, 255, 0.719);
   }
   &:active {
