--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -5,5 +5,7 @@
     autocomplete="off"
     placeholder="Search images..."
   />
-  <button type="submit">Search</button>
+  <button type="submit">
+    <img src="./images/loupe-svgrepo-com.svg" alt="loupe" />
+  </button>
 </form>
