--- a/src/sass/search.scss
+++ b/src/sass/search.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 50px;
-  background-color: blue;
+  background-color: rgb(0, 0, 255);
 }
 input {
   padding: 7px;
@@ -19,7 +19,7 @@ button {
   border-color: rgb(255, 255, 255);
   border-radius: 7px;
 
-  :hover img {
-    background-color: rgba(255, 255, 255, 0.596);
+  &:hover svg {
+    fill: rgb(0, 0, 255);
   }
 }
