--- a/src/sass/search.scss
+++ b/src/sass/search.scss
@@ -13,11 +13,15 @@ input {
   height: 40px;
   border-radius: 7px;
 }
+svg {
+  transition: fill 200ms linear;
+}
 button {
   height: 40px;
+  border-radius: 7px;
   background-color: rgb(255, 255, 255);
   border-color: rgb(255, 255, 255);
-  border-radius: 7px;
+  cursor: pointer;
 
   &:hover svg {
     fill: rgb(0, 0, 255);
