--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -47,3 +47,10 @@ img {
 a {
   color: rgb(0, 0, 0);
 }
+.page-load-status {
+  display: none; /* hidden by default */
+  padding-top: 20px;
+  border-top: 1px solid #ddd;
+  text-align: center;
+  color: #777;
+}
